# reflex-experiment

./: .gitignore  pyproject.toml  rxconfig.py  test.ipynb
.web/: components.json  package.json  reflex.install_frontend_packages.cached  reflex.json  tailwind.config.js  tsconfig.json
.web/custom/: accordion.tsx  button.tsx  serialize.ts
.web/custom/shadcn/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  input.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  slider.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  (+3 more)
.web/pages/: _app.js  index.js
.web/styles/: shadcn.css  tailwind.css
.web/utils/: components.js  context.js
reflex_experiment/: accordion.py  archive.py  attributes.py  button.py  elements.py  events.py  example.py  helpers.py  props.py  pyi_generator.py  reflex_experiment.py  test.py
reflex_experiment/components/: base.py  base.pyi  button.py  button.pyi
reflex_experiment/components/ui/: accordion.py  alert.py  alert_dialog.py  aspect_ratio.py  avatar.py  badge.py  breadcrumb.py  button.py  calendar.py  card.py  carousel.py  checkbox.py  collapsible.py  command.py  context_menu.py  dialog.py  drawer.py  dropdown_menu.py  form.py  (+26 more)
scripts/: generate_pyi_files.py
